--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prestart": "npm run tsm:build",
     "start": "gatsby develop",
     "prebuild": "npm run tsm:build",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
@@ -69,6 +70,7 @@
     "gatsby-plugin-provide-react": "1.0.2",
     "gatsby-plugin-react-svg": "3.1.0",
     "gatsby-plugin-sass": "5.11.1",
+    "gh-pages": "3.2.3",
     "husky": "7.0.4",
     "identity-obj-proxy": "3.0.0",
     "jest": "27.5.1",
