--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "prestart": "npm run tsm:build",
     "start": "gatsby develop",
     "prebuild": "npm run tsm:build",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
+    "deploy": "gh-pages -d public",
     "build": "gatsby build",
+    "build:prefix-paths": "gatsby build --prefix-paths",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "tsm:watch": "npm run tsm:build -- --watch",
