--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
       run: npm install
 
     - name: Build
-      run: npm run build
+      run: npm run build:prefix-paths
 
     - name: Deploy
       run: |
