--- a/.eslintrc
+++ b/.eslintrc
@@ -85,6 +85,7 @@
         "prettier"
       ],
       "rules": {
+        "no-underscore-dangle": "off",
         "no-shadow": "off",
         "@typescript-eslint/no-shadow": "error",
         "@typescript-eslint/explicit-function-return-type": "off",
