--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "normalize.css": "8.0.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-helmet": "6.1.0"
+    "react-helmet": "6.1.0",
+    "rxjs": "7.5.5",
+    "simplex-noise": "3.0.1"
   },
   "devDependencies": {
     "@babel/preset-react": "7.16.7",
