--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "clean": "gatsby clean",
     "tsm:watch": "npm run tsm:build -- --watch",
     "tsm:build": "node ./node_modules/.bin/typed-scss-modules \"./src/**/*.module.scss\" --aliasPrefixes.\"~\" \"src/\" --logLevel \"error\"",
-    "type-check": "tsc",
+    "type-check": "node ./node_modules/.bin/tsc --noEmit -p ./tsconfig.json",
     "lint": "eslint --ignore-path .gitignore \"src/**/*.+(ts|tsx)\"",
     "format": "prettier --ignore-path .gitignore \"src/**/*.+(ts|tsx)\" --write",
     "postinstall": "husky install",
@@ -32,7 +32,6 @@
   "dependencies": {
     "classnames": "2.3.1",
     "gatsby": "4.11.1",
-    "gatsby-plugin-react-helmet": "5.11.0",
     "normalize.css": "8.0.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
@@ -69,6 +68,7 @@
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.29.4",
+    "gatsby-plugin-react-helmet": "5.11.0",
     "eslint-plugin-react-hooks": "4.4.0",
     "gatsby-plugin-provide-react": "1.0.2",
     "gatsby-plugin-react-svg": "3.1.0",
