--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "prestart": "npm run tsm:build",
     "start": "gatsby develop",
-    "prebuild": "npm run tsm:build",
+    "prebuild": "npm run tsm:build && npm run type-check",
     "deploy": "gh-pages -d public",
     "build": "gatsby build",
     "build:prefix-paths": "gatsby build --prefix-paths",
