--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "classnames": "2.3.1",
+    "framer-motion": "6.2.9",
     "gatsby": "4.11.1",
     "normalize.css": "8.0.1",
     "react": "18.0.0",
