--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "classnames": "2.3.1",
     "gatsby": "4.11.1",
     "normalize.css": "8.0.1",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-helmet": "6.1.0",
     "rxjs": "7.5.5",
     "simplex-noise": "3.0.1"
@@ -68,9 +68,10 @@
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.29.4",
-    "gatsby-plugin-react-helmet": "5.11.0",
     "eslint-plugin-react-hooks": "4.4.0",
+    "gatsby-plugin-preact": "6.12.1",
     "gatsby-plugin-provide-react": "1.0.2",
+    "gatsby-plugin-react-helmet": "5.11.0",
     "gatsby-plugin-react-svg": "3.1.0",
     "gatsby-plugin-sass": "5.11.1",
     "gh-pages": "3.2.3",
@@ -78,6 +79,8 @@
     "identity-obj-proxy": "3.0.0",
     "jest": "27.5.1",
     "lint-staged": "12.3.7",
+    "preact": "10.7.1",
+    "preact-render-to-string": "5.1.21",
     "prettier": "2.6.2",
     "sass": "1.50.0",
     "ts-jest": "27.1.4",
