--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "classnames": "2.3.1",
     "gatsby": "4.11.1",
+    "gatsby-image": "3.11.0",
     "normalize.css": "8.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -59,6 +60,7 @@
     "babel-preset-gatsby": "2.11.1",
     "commitizen": "4.2.4",
     "cz-conventional-changelog": "3.3.0",
+    "dotenv": "16.0.0",
     "eslint": "8.12.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "8.5.0",
@@ -74,6 +76,9 @@
     "gatsby-plugin-react-helmet": "5.11.0",
     "gatsby-plugin-react-svg": "3.1.0",
     "gatsby-plugin-sass": "5.11.1",
+    "gatsby-source-cloudinary": "0.1.14",
+    "gatsby-source-filesystem": "4.12.1",
+    "gatsby-transformer-cloudinary": "2.2.4",
     "gh-pages": "3.2.3",
     "husky": "7.0.4",
     "identity-obj-proxy": "3.0.0",
