--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "format": "prettier --ignore-path .gitignore \"src/**/*.+(ts|tsx)\" --write",
     "postinstall": "husky install",
     "test": "jest",
-    "commit": "cz"
+    "commit": "cz",
+    "build:cv-pdf": "node ./scripts/generate-cv-pdf.js"
   },
   "lint-staged": {
     "./src/**/*.{ts,tsx}": [
@@ -31,9 +32,11 @@
   },
   "dependencies": {
     "classnames": "2.3.1",
+    "fs-extra": "10.0.1",
     "gatsby": "4.11.1",
     "gatsby-image": "3.11.0",
     "normalize.css": "8.0.1",
+    "puppeteer": "13.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-helmet": "6.1.0",
@@ -71,6 +74,7 @@
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.29.4",
     "eslint-plugin-react-hooks": "4.4.0",
+    "gatsby-plugin-pdf": "0.0.1",
     "gatsby-plugin-preact": "6.12.1",
     "gatsby-plugin-provide-react": "1.0.2",
     "gatsby-plugin-react-helmet": "5.11.0",
