--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,9 +25,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: Install dependencies
-      run: |
-        sudo apt install -y ghostscript
-        npm install
+      run: npm install
 
     - name: Build
       run: npm run build:prefix-paths
@@ -41,7 +39,6 @@ jobs:
         cp -a ${PWD}/src/assets/fonts/. ~/.fonts
         fc-cache -f -v
         npm run build:cv-pdf
-        npm run optimize-pdf
 
     - name: Deploy
       run: |
