--- a/.eslintrc
+++ b/.eslintrc
@@ -87,6 +87,8 @@
       "rules": {
         "no-underscore-dangle": "off",
         "no-shadow": "off",
+        "dot-notation": "off",
+        "import/no-import-module-exports": "off",
         "@typescript-eslint/no-shadow": "error",
         "@typescript-eslint/explicit-function-return-type": "off",
         "@typescript-eslint/no-explicit-any": "off",
