--- a/package.json
+++ b/package.json
@@ -54,8 +54,10 @@
     "@testing-library/jest-dom": "5.16.3",
     "@testing-library/react": "13.0.0",
     "@testing-library/react-hooks": "7.0.2",
+    "@types/fs-extra": "9.0.13",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.26",
+    "@types/reach__router": "1.3.10",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
     "@types/react-helmet": "6.1.5",
