--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI/CD
+name: Build & Start Deploy
 
 on:
   workflow_dispatch:
@@ -9,13 +9,9 @@ on:
 
 jobs:
   build:
-    name: Make Build & Deploy
+    name: Make Build & Start Deploy
 
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [14.x]
 
     steps:
       - name: Checkout repository
@@ -23,10 +19,10 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set up Node.js ${{ matrix.node-version }}
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 14.x
 
       - name: Install dependencies
         run: npm install
@@ -34,7 +30,7 @@ jobs:
       - name: Lint
         run: npm run lint
 
-      - name: Build 🔧
+      - name: Build
         run: npm run build:prefix-paths
         env:
           CLOUDINARY_CLOUD_NAME: ${{ secrets.CLOUDINARY_CLOUD_NAME }}
@@ -48,7 +44,7 @@ jobs:
           fc-cache -f -v
           npm run build:cv-pdf
 
-      - name: Deploy
+      - name: Start Deploy
         uses: JamesIves/github-pages-deploy-action@v4.3.0
         with:
           branch: gh-pages
