--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -27,13 +27,13 @@ jobs:
         uses: bahmutov/npm-install@HEAD
 
       - name: Check types
-        run: yarn type-check
+        run: npm run type-check
 
       - name: Check linting
-        run: yarn lint
+        run: npm run lint
 
       - name: Run tests
-        run: yarn test
+        run: npm run test
 
       - name: Check commits messages
         uses: wagoid/commitlint-github-action@v4
