--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "react-dom": "17.0.2",
     "react-helmet": "6.1.0",
     "rxjs": "7.5.5",
-    "simplex-noise": "3.0.1",
-    "use-scroll-direction": "1.1.4"
+    "simplex-noise": "3.0.1"
   },
   "devDependencies": {
     "@babel/preset-react": "7.16.7",
