--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@testing-library/react-hooks": "7.0.2",
     "@types/fs-extra": "9.0.13",
     "@types/jest": "27.4.1",
+    "@types/js-yaml": "4.0.5",
     "@types/node": "16.11.26",
     "@types/reach__router": "1.3.10",
     "@types/react": "17.0.43",
@@ -88,6 +89,7 @@
     "husky": "7.0.4",
     "identity-obj-proxy": "3.0.0",
     "jest": "27.5.1",
+    "js-yaml": "4.1.0",
     "lint-staged": "12.3.7",
     "preact": "10.7.1",
     "preact-render-to-string": "5.1.21",
