--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gatsby": "4.11.1",
     "gatsby-image": "3.11.0",
     "gatsby-plugin-google-gtag": "4.12.1",
+    "gatsby-plugin-image": "2.12.1",
     "normalize.css": "8.0.1",
     "puppeteer": "13.5.2",
     "react": "17.0.2",
@@ -83,9 +84,9 @@
     "gatsby-plugin-react-helmet": "5.11.0",
     "gatsby-plugin-react-svg": "3.1.0",
     "gatsby-plugin-sass": "5.11.1",
-    "gatsby-source-cloudinary": "0.1.14",
+    "gatsby-plugin-sharp": "4.12.1",
     "gatsby-source-filesystem": "4.12.1",
-    "gatsby-transformer-cloudinary": "2.2.4",
+    "gatsby-transformer-sharp": "4.12.1",
     "husky": "7.0.4",
     "identity-obj-proxy": "3.0.0",
     "jest": "27.5.1",
