--- a/data/cv/godested.yml
+++ b/data/cv/godested.yml
@@ -40,11 +40,11 @@ socials:
     iconURL: https://res.cloudinary.com/dtcmmxxh9/image/upload/v1650905546/gatsby-cloudinary/3.svg
 
 languages:
-  - type: english
+  - countryCode: GB
     name: English
     level: Upper-Intermediate
 
-  - type: ukrainian
+  - countryCode: UA
     name: Ukrainian/Russian
     level: Native
 
