--- a/package.json
+++ b/package.json
@@ -86,8 +86,10 @@
     "gatsby-plugin-react-svg": "3.1.0",
     "gatsby-plugin-sass": "5.11.1",
     "gatsby-plugin-sharp": "4.12.1",
-    "gatsby-source-filesystem": "4.12.1",
+    "gatsby-source-filesystem": "4.13.0",
+    "gatsby-transformer-inline-svg": "1.2.0",
     "gatsby-transformer-sharp": "4.12.1",
+    "gatsby-transformer-yaml": "4.13.0",
     "husky": "7.0.4",
     "identity-obj-proxy": "3.0.0",
     "jest": "27.5.1",
