--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,9 @@ jobs:
         with:
           node-version: 14.x
 
-      - name: Install dependencies
+      - uses: c-hive/gha-npm-cache@v1
+
+      - name: Install dependencies (with cache)
         run: npm install
 
       - name: Lint
@@ -37,6 +39,25 @@ jobs:
         run: npm run build:prefix-paths
         env:
           GOOGLE_ANALYTICS_TRACKING_ID: ${{ secrets.GOOGLE_ANALYTICS_TRACKING_ID }}
+
+      - name: Cache ghostscript
+        uses: actions/cache@v2
+        id: cache-ghostscript
+        with:
+          path: "~/ghostscript"
+          key: ghostscript
+
+      - name: Install ghostscript
+        env:
+          CACHE_HIT: ${{steps.cache-ghostscript.outputs.cache-hit}}
+        run: |
+          if [[ "$CACHE_HIT" == 'true' ]]; then
+            sudo cp --verbose --force --recursive ~/ghostscript/* /
+          else
+            sudo apt-get install --yes ghostscript
+            mkdir -p ~/ghostscript
+            sudo dpkg -L ghostscript | while IFS= read -r f; do if test -f $f; then echo $f; fi; done | xargs cp --parents --target-directory ~/ghostscript/
+          fi
 
       - name: Build CV PDF
         run: |
