--- a/package.json
+++ b/package.json
@@ -82,12 +82,13 @@
     "gatsby-plugin-manifest": "4.12.1",
     "gatsby-plugin-preact": "6.12.1",
     "gatsby-plugin-react-helmet": "5.11.0",
-    "gatsby-plugin-react-svg": "3.1.0",
     "gatsby-plugin-sass": "5.11.1",
     "gatsby-plugin-sharp": "4.12.1",
+    "gatsby-plugin-svg-sprites": "4.3.0",
     "gatsby-source-filesystem": "4.13.0",
     "gatsby-transformer-inline-svg": "1.2.0",
     "gatsby-transformer-sharp": "4.12.1",
+    "gatsby-transformer-svg-sprites": "4.0.2",
     "gatsby-transformer-yaml": "4.13.0",
     "husky": "7.0.4",
     "identity-obj-proxy": "3.0.0",
