--- a/data/cv/godested/cv.yml
+++ b/data/cv/godested/cv.yml
@@ -76,7 +76,7 @@ body:
         position: Senior Frontend Engineer
         description:
           - text:
-              I played a significant part in developing 5 new games for tens of thousands of users,
+              Developed 5 new games for ten of thousands of users,
               was engaged in code reviews, improving DX, refactoring existing solutions, and developing new complex features.
             color: 2
           - text:
